--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         android:text="+2 Points"
         android:textColor="@color/white"
         android:textSize="16sp"
-        app:backgroundTint="#7C7979"
+        app:backgroundTint="#FF9800"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/button2"
@@ -45,7 +45,7 @@
         android:text="+2 points"
         android:textColor="@color/white"
         android:textSize="16sp"
-        app:backgroundTint="#7C7979"
+        app:backgroundTint="#FF9800"
         app:layout_constraintEnd_toStartOf="@+id/button4"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -60,7 +60,7 @@
         android:text="Free throw"
         android:textColor="@color/white"
         android:textSize="16sp"
-        app:backgroundTint="#7C7979"
+        app:backgroundTint="#FF9800"
         app:layout_constraintEnd_toStartOf="@+id/button5"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -75,7 +75,7 @@
         android:text="+3 points"
         android:textColor="@color/white"
         android:textSize="16sp"
-        app:backgroundTint="#7C7979"
+        app:backgroundTint="#FF9800"
         app:layout_constraintEnd_toStartOf="@+id/button"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -91,7 +91,7 @@
         android:fontFamily="@font/roboto_light"
         android:text="0"
         android:textColor="@color/black"
-        android:textSize="16sp"
+        android:textSize="48sp"
         app:layout_constraintEnd_toStartOf="@+id/teamBScore"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -121,7 +121,7 @@
         android:fontFamily="@font/roboto_light"
         android:text="0"
         android:textColor="@color/black"
-        android:textSize="16sp"
+        android:textSize="48sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/teamAScore"
@@ -136,7 +136,7 @@
         android:text="+3 POINTS"
         android:textColor="@color/white"
         android:textSize="16sp"
-        app:backgroundTint="#7C7979"
+        app:backgroundTint="#FF9800"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/button1"
@@ -151,19 +151,39 @@
         android:text="Free throw"
         android:textColor="@color/white"
         android:textSize="16sp"
-        app:backgroundTint="#7C7979"
+        app:backgroundTint="#FF9800"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/button3"
         app:layout_constraintTop_toBottomOf="@+id/button4" />
 
-    <LinearLayout
-        android:layout_width="1dp"
-        android:layout_height="match_parent"
-        android:background="@color/black"
-        android:orientation="vertical"
+    <Button
+        android:id="@+id/reset"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="Resets"
+        android:text="RESET"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        app:backgroundTint="#FF9800"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"></LinearLayout>
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="1dp"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="415dp"
+        android:background="@color/black"
+        android:orientation="vertical"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="@+id/button5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0">
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
